<resources>
    <string name="app_name">FindYourBus</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="app_logo">App Logo Icon</string>
    <string name="type">Type</string>
    <string name="search">Search</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="bus_no">Bus Nos.</string>
    <string name="route">Route %d</string>
    <string name="empty_string_message">Some fields are empty! Please try again!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="recent_search">Recent Search</string>
    <string name="widget_route_key">widget_recipe_key</string>
    <string name="add_to_widget">Add To Widget</string>
    <string name="added_to_widget">Route is added to widget!</string>
    <string name="error_message">Fail to get results.Please try again!</string>

    <!--Admob Strings-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_id">ca-app-pub-6428454575275604~8407029949</string>
    <string name="spinner_dropdown">spinner dropdown image</string>
    <string name="hint_to">To</string>
    <string name="hint_from">From</string>
    <string name="divider">Line Divider</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="dash_line">Dash Line</string>
    <string name="bus_image">Bus Forward Image</string>
    <string name="no_bus">No bus available for this route!</string>
    <string name="no_input">No input available for getting results!</string>
    <string name="hop_string">Hop: %s</string>
    <string name="busListSize">bind: buslistSize =</string>
    <string name="widget_from">From:</string>
    <string name="widget_to">To:</string>
    <string name="google_singin_fail">Google SignIn failed!</string>
    <string name="auth_success">Authentication Successful!</string>
    <string name="auth_fail">Authentication Failed! Please try again!</string>
    <string name="search_data_not_available">Search data unavailable! Please add it from the app to view it :)</string>
</resources>
