<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardMargin"
    app:cardCornerRadius="@dimen/cardCornerRadius">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ResultActivity">

        <TextView
            android:id="@+id/hop_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxWidth="100dp"
            android:textSize="@dimen/hop_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hop 1" />

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxWidth="100dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Sapthagiri Engineering College" />

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxWidth="100dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Jallahali Cross" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_to"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toEndOf="@+id/tv_from"
            app:layout_constraintTop_toBottomOf="@+id/hop_no"
            app:srcCompat="@drawable/bus_forward"
            android:contentDescription="@string/bus_image" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/tv_from"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@android:color/black"
            android:contentDescription="@string/dash_line" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/tv_to"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@android:color/black"
            android:contentDescription="@string/dash_line" />

        <TextView
            android:id="@+id/label_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="@+id/tv_from"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/label_distance"
            app:layout_constraintEnd_toEndOf="@+id/tv_to"
            app:layout_constraintTop_toTopOf="@+id/label_distance"
            tools:text="34kms" />

        <TextView
            android:id="@+id/label_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/label_distance"
            app:layout_constraintTop_toBottomOf="@+id/label_distance" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/label_duration"
            app:layout_constraintEnd_toEndOf="@+id/tv_distance"
            app:layout_constraintTop_toTopOf="@+id/label_duration"
            tools:text="30min" />

        <TextView
            android:id="@+id/label_bus_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bus_no"
            app:layout_constraintStart_toStartOf="@+id/label_duration"
            app:layout_constraintTop_toBottomOf="@+id/label_duration" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_bus_nos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_duration"
            app:layout_constraintStart_toStartOf="@+id/label_bus_no"
            app:layout_constraintTop_toBottomOf="@+id/label_bus_no" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.53" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/label_distance"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/label_distance"
            app:srcCompat="@drawable/ic_right"
            android:contentDescription="@string/left_arrow" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/label_duration"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/label_duration"
            app:srcCompat="@drawable/ic_right"
            android:contentDescription="@string/right_arrow" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>