<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    tools:context=".activity.ResultActivity">

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_medium"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_from"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/tv_to"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/label_distance"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/tv_to"
        tools:text="34km"/>

    <TextView
        android:id="@+id/label_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_distance"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_large"
        tools:text="30min"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_distance"/>

    <TextView
        android:id="@+id/label_bus_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/label_duration"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/bus_no" />

    <TextView
        android:id="@+id/tv_bus_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_bus_no"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"/>

</RelativeLayout>